<resources>
    <string name="app_name">BCRecognition</string>
    <string name="scanning_header_message">Add a card</string>
    <string name="card_preview_header">Card preview</string>
    <string name="recognized_text_header">Contact information</string>
    <string name="scanning_help_message">Line it up with the frame</string>
    <string name="scanning_button">Scan</string>
    <string name="camera_access_required">Application will close if permissions will not be granted. Request
        permissions?
    </string>
    <string name="camera_access_required_title">Camera and storage access is required</string>
    <string name="camera_access_error">Application cannot get an access to device camera. Exit</string>
    <string name="ok" translatable="false">OK</string>
    <string name="cancel">Cancel</string>
    <string name="external_storage_error">Application cannot find external storage. Please insert SD card before it may continue</string>
    <string name="empty_text">Text not detected</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="camera_configure_error">Camera configure failed</string>
    <string name="camera_activity_menu_entry">Scan card</string>
    <string name="saved_unrecognized_cards">Cards gallery</string>
    <string name="communicate">Communicate</string>
    <string name="contact">Email us</string>
    <string name="settings_activity_menu_entry">Settings</string>
    <string name="recognition_error">Card cannot be processed correctly. Something goes wrong with recognition module</string>
    <string name="image_description" translatable="false">description</string>
    <string name="contact_name">Name</string>
    <string name="contact_organization">Company</string>
    <string name="contact_phone">Phone</string>
    <string name="contact_email">E-mail</string>
    <string name="contact_address">Address</string>
    <string name="add_contact_button">Export to address book</string>
    <string name="recognition_progress_text">Card processing…</string>
    <string name="offline_switch_name">Offline mode</string>
    <string name="network_connection_setting">Network connection</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="online_notification_title">Notify about online availability</string>
    <string name="offline_notification_title">Warn about offline mode</string>
    <string name="online_notification_description_on">Receive notification each time network connection detected</string>
    <string name="offline_notification_description_on">Receive notification when network connection is unavailable</string>
    <string name="wifi_only_title">Wi-Fi only</string>
    <string name="wifi_only_description_on">Use cloud recognition only over Wi-Fi</string>
    <string name="notification_category">Notification</string>
    <string name="network_category">Network</string>
    <string name="online_notification_description_off">Do not receive notification each time network connection detected</string>
    <string name="offline_notification_description_off">Do not receive notification when network connection is unavailable</string>
    <string name="wifi_only_description_off">Use cloud recognition over any network</string>
    <string name="header_branding" translatable="false">Business cards recognition application</string>
    <string name="permission_denied_error">Application could not function without camera and storage access</string>
    <string name="switch_offline_notification_dialog_header">No network available</string>
    <string name="switch_offline_notification_dialog_body">Recognition process may be proceed in offline mode, but recognition quality may significantly degrade. Would you like to continue?</string>
    <string name="switch_online_notification_dialog_header">Cloud recognition available</string>
    <string name="switch_online_notification_dialog_body">Application can use an Internet access to recognize this card better. Turn on online recognition mode?</string>
    <string name="error_title">Error</string>
    <string name="warning_title">Warning</string>
    <string name="textplaceholder">TextPlaceholder</string>
    <string name="save_to_gallery_button">Save to gallery</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="edit_button_text">Edit</string>
    <string name="save_contact_edit">Save</string>
    <string name="language_category">Language</string>
    <string name="offline_language_selector_title">Offline mode language</string>
    <string name="offline_language_selector_summary">Choose language that will be used for card recognition in offline mode</string>
</resources>
