<?xml version ="1.0" encoding ="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/notification_category">
        <CheckBoxPreference
            android:key="internet_enable_notification"
            android:title="@string/online_notification_title"
            android:summaryOn="@string/online_notification_description_on"
            android:summaryOff="@string/online_notification_description_off"
            android:icon="@drawable/ic_signal_wifi_4_bar_black_24dp"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="internet_disable_notification"
            android:title="@string/offline_notification_title"
            android:summaryOn="@string/offline_notification_description_on"
            android:summaryOff="@string/offline_notification_description_off"
            android:icon="@drawable/ic_signal_wifi_off_black_24dp"
            android:defaultValue="true"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/network_category">
        <CheckBoxPreference
            android:key="wifi_only_mode"
            android:title="@string/wifi_only_title"
            android:summaryOn="@string/wifi_only_description_on"
            android:summaryOff="@string/wifi_only_description_off"
            android:icon="@drawable/ic_wifi_black_24dp"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/language_category">
        <ListPreference
            android:key="offline_language"
            android:title="@string/offline_language_selector_title"
            android:summary="@string/offline_language_selector_summary"
            android:defaultValue="en"
            android:entries="@array/offline_language_names_array"
            android:entryValues="@array/offline_language_values_array"
            android:icon="@drawable/ic_language_black_24dp"/>
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
