<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gallery.editing.EditingFragment">

    <LinearLayout
        android:id="@+id/main_recognition_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="76dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="30"
            android:isScrollContainer="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/card_preview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/image_description" />
            </LinearLayout>
        </ScrollView>

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="70">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/contact_info_header"
                        android:layout_width="323dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/recognized_text_header"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:id="@+id/linearLayout2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toTopOf="@+id/create_contact_button"
                        app:layout_constraintTop_toBottomOf="@+id/contact_info_header">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/name_text_input"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:hint="@string/contact_name"
                            android:layout_width="match_parent"
                            android:layout_height="60dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/name_edit_text"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:inputType="textPersonName" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/organization_text_input"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:hint="@string/contact_organization"
                            android:layout_width="match_parent"
                            android:layout_height="60dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/organization_edit_text"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:inputType="text" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/phone_text_input"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:hint="@string/contact_phone"
                            android:layout_width="match_parent"
                            android:layout_height="60dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/phone_edit_text"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:inputType="number|text" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/email_text_input"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="60dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/email_edit_text"
                                android:hint="@string/contact_email"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:inputType="textEmailAddress" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/address_text_input"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="60dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/address_edit_text"
                                android:hint="@string/contact_address"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:inputType="text" />
                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                    <Button
                        android:id="@+id/create_contact_button"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginBottom="15dp"
                        android:gravity="center"
                        android:text="@string/add_contact_button"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <Button
                        android:id="@+id/save_to_gallery_button"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="15dp"
                        android:text="@string/save_to_gallery_button"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <Button
                        android:id="@+id/save_edit_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/save_contact_edit"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>