<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:id="@+id/main_layout">

    <TextureView
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/camera_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="225dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:visibility="visible" app:layout_constraintHorizontal_bias="0.0"
            android:background="@android:color/white" tools:background="@android:color/background_light">

        <TextView
                android:text="@string/scanning_header_message"
                android:layout_width="194dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:id="@+id/card_recognize_header"
                android:textSize="30sp"
                android:gravity="center_horizontal|center_vertical" android:textAlignment="center"/>
        <TextView
                android:text="@string/scanning_help_message"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_width="wrap_content"
                android:textSize="20sp"
                android:layout_height="wrap_content" android:id="@+id/textView2" android:paddingBottom="10dp"/>
    </FrameLayout>
    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="225dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="visible" tools:background="@android:color/background_light"
            android:background="@android:color/background_light">

        <Button
                android:text="@string/scanning_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/recognize_submit" android:textSize="18sp"
                app:layout_constraintVertical_bias="0.37"/>
    </FrameLayout>

</android.support.constraint.ConstraintLayout>