<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CameraFragment" android:id="@+id/main_layout"
        android:background="@android:color/background_light">

    <TextureView
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/camera_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <FrameLayout
            android:id="@+id/top_border"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="35"
            android:background="@android:color/white"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:background="@android:color/background_light">

            <TextView
                android:id="@+id/card_recognize_header"
                android:layout_width="194dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/scanning_header_message"
                android:textAlignment="center"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:paddingBottom="10dp"
                android:text="@string/scanning_help_message"
                android:textSize="20sp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="30" />

        <FrameLayout
            android:id="@+id/lower_border"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="35"
            android:background="@android:color/background_light"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:background="@android:color/background_light">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/recognize_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/scanning_button"
                android:textSize="18sp"
                app:layout_constraintVertical_bias="0.37" />
        </FrameLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>