<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RecognitionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="76dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="79dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="323dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:text="@string/card_preview_header"
                android:textAlignment="center"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/card_preview_layout"
            android:layout_width="match_parent"
            android:layout_height="214dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">

            <ImageView
                android:id="@+id/card_preview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@color/colorPrimary" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="323dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/recognized_text_header"
                android:textAlignment="center"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="80dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/name_text_input"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="60dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/name_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/contact_name" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>
            </ScrollView>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>